# Pixelka

./: .gitignore  CMakeLists.txt  CMakePresets.json  Pixelka.c  Pixelka.cpp  Pixelka.h  README.md  toolchain.cmake
assets/: bitmap.h
cmake/: avr-gcc-toolchain.cmake  avr-toolchain.cmake
core/libraries/: CMakeLists.txt
core/libraries/Adafruit-GFX/: CMakeLists.txt
core/libraries/Adafruit_BusIO/: CMakeLists.txt
core/libraries/Adafruit_SSD1306/: CMakeLists.txt
core/libraries/SPI/: CMakeLists.txt
core/libraries/SoftwareSerial/: CMakeLists.txt
core/libraries/Wire/: CMakeLists.txt
include/: JoyInput.h  Menu.h  Pixelka.h
include/device/: joystick.h  oled_SSD1306.h
include/drivers/: i2c.h  spi.h
include/game/: DuckHunt.h  flappybird.h  game.h  racer.h  snake.h
include/util/: pin.h
source/device/: joystick.c  oled_SSD1306.c
source/drivers/: i2c.c  spi.c
source/util/: pin.c
src/: JoyInput.cpp  Menu.cpp
src/game/: DuckHunt.cpp  flappybird.cpp  racer.cpp  snake.cpp
